# MetaCG

./: .ci-defaults-template.yml  .clang-format  .clang-tidy  .cmake-format.json  .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Config.h.in  LICENSE.txt  README.md  TargetCollector.py  build_submodules.sh  checkTests.sh  formatSrc.sh
cgcollector/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Config.h.in  README.md  formatAllSrc.sh
cgcollector/cmake/: GetGitRevisionDescription.cmake  ToolchainOptions.cmake  json.cmake
cgcollector/lib/: CMakeLists.txt
cgcollector/lib/include/: AAReferenceVisitor.h  AAReferenceVisitorBase.h  AAUSR.h  AliasAnalysis.h  CallGraph.h  CallgraphToJSON.h  GlobalCallDepth.h  JSONManager.h  MetaCollector.h  MetaInformation.h  Utils.h
cgcollector/lib/src/: AAReferenceVisitor.cpp  AAUSR.cpp  AliasAnalysis.cpp  CallGraph.cpp  CallgraphToJSON.cpp  GlobalCallDepth.cpp  JSONManager.cpp
cgcollector/test/: CGSimpleTester.cpp  CMakeLists.txt  MCGTester.cpp  README.md  STDTester.cpp  run_aa_test.sh  run_format_one_test.sh  run_format_two_test.sh  run_simple_test.sh  testBase.sh
cgcollector/test/input/: 0001.cpp  0001.gtipcg  0002.cpp  0003.gtipcg  0004.cpp  0005.gtipcg  0006.gtipcg  0007.cpp  0007.gtipcg  0008.cpp  0009.cpp  0010.gtipcg  0012.cpp  0012.gtipcg  0013.cpp  0015.cpp  0016.gtipcg  0017.cpp  0018.cpp  0020.cpp  0021.cpp  0022.cpp  0023.cpp  0023.gtipcg  0024.gtipcg  0025.gtipcg  0029.gtipcg  0030.gtipcg  0031.cpp  0032.cpp  0036.cpp  0037.cpp  0038.cpp  0038.gtipcg  0039.cpp  0040.cpp  0041.gtipcg  0042_a.gtipcg  0042_b.gtipcg  0042_combined.gtipcg  (+23 more)
cgcollector/test/integration/: runner.sh
cgcollector/tools/: CGCollector.cpp  CGMerge.cpp  CGValidate.cpp  CGVerify.cpp  CMakeLists.txt  cgc
graph/: CMakeLists.txt  README.md
graph/include/: Callgraph.h  CgEdge.h  CgEdgePtr.h  CgNode.h  CgNodePtr.h  CgTypes.h  DotIO.h  IdMapping.h  LoggerUtil.h  MCGBaseInfo.h  MCGManager.h  MCGReader.h  MCGWriter.h  MergePolicy.h  MetaData.h  ReachabilityAnalysis.h  Timing.h  Util.h
graph/include/io/: IdMapping.h  MCGReader.h  MCGWriter.h  VersionFourMCGReader.h  VersionFourMCGWriter.h  VersionThreeMCGReader.h  VersionThreeMCGWriter.h  VersionTwoMCGReader.h  VersionTwoMCGWriter.h
graph/include/metadata/: BuiltinMD.h  CodeStatisticsMD.h  CustomMD.h.in  EntryFunctionMD.h  FileMD.h  FilePropertiesMD.h  InlineMD.h  LoopMD.h  MallocVariableMD.h  MetaData.h  MetadataMixin.h  NumConditionalBranchMD.h  NumOperationsMD.h  NumStatementsMD.h  OverrideMD.h  UniqueTypeMD.h
graph/src/: Callgraph.cpp  CgEdge.cpp  CgNode.cpp  DotIO.cpp  LoggerUtil.cpp  MCGBaseInfo.cpp  MCGManager.cpp  MCGReader.cpp  MCGWriter.cpp  MergePolicy.cpp  ReachabilityAnalysis.cpp
graph/src/io/: MCGReader.cpp  MCGWriter.cpp  VersionFourMCGReader.cpp  VersionFourMCGWriter.cpp  VersionThreeMCGReader.cpp  VersionThreeMCGWriter.cpp  VersionTwoMCGReader.cpp  VersionTwoMCGWriter.cpp
graph/test/install/: CMakeLists.txt  main.cpp
graph/test/unit/: CGNodeTests.cpp  CMakeLists.txt  CgNodeTest.cpp  DotIOTest.cpp  GlobalMDTest.cpp  LoggingTest.cpp  MCGManagerTest.cpp  MCGReaderTest.cpp  MCGWriterTest.cpp  ReachabilityAnalysisTest.cpp  (+12 more)
pgis/: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  LICENSE.txt  README.md  build_submodules.sh  formatSrc.sh  run-in-path.sh  spec-run.sh
pgis/cmake/: ToolchainOptions.cmake  spdlog.cmake.in
pgis/lib/: CMakeLists.txt
pgis/spec-centos/: 403.gcc.clang.samples  429.mcf.clang.cubex  429.mcf.clang.samples  433.milc.clang.cubex  433.milc.clang.samples  444.namd.clang.cubex  444.namd.clang.samples  447.dealII.clang.samples  450.soplex.clang.cubex  450.soplex.clang.samples  453.povray.gcc.samples  456.hmmer.clang.cubex  456.hmmer.clang.samples  458.sjeng.clang.cubex  458.sjeng.clang.samples  462.libquantum.clang.cubex  462.libquantum.clang.samples  464.h264ref.clang.cubex  464.h264ref.clang.samples  470.lbm.clang.cubex  470.lbm.clang.samples  473.astar.clang.cubex  473.astar.clang.samples  482.sphinx3.clang.cubex  482.sphinx3.clang.samples  _403.gcc.clang.cfg  _429.mcf.clang.cfg  _433.milc.clang.cfg  _444.namd.clang.cfg  _447.dealII.clang.cfg  _450.soplex.clang.cfg  _453.povray.gcc.cfg  _456.hmmer.clang.cfg  _458.sjeng.clang.cfg  _462.libquantum.clang.cfg  _464.h264ref.clang.cfg  _470.lbm.clang.cfg  _473.astar.clang.cfg  _482.sphinx3.clang.cfg
pgis/spec-testcases/: 429.mcf.1.cubex  433.milc.1.cubex  435.gromacs.2.cubex  444.namd.1.cubex  450.soplex.1.cubex  456.hmmer.2.cubex  458.sjeng.2.cubex  462.libquantum.1.cubex  464.h264ref.1.cubex  470.lbm.4.cubex  473.astar.1.cfg  473.astar.1.cubex  482.sphinx3.1.cubex  998.specrand.1.cubex
pgis/test/: CMakeLists.txt
pgis/testcases/: _callconjunction3.cfg  callchain.cpp  callchain.cubex  callconjunction.cpp  callconjunction.cubex  callconjunction2.cpp  callconjunction2.cubex  callconjunction3.cpp  callconjunction3.cubex  callconjunction4.cpp  callconjunction4.cubex  callconjunction5.cpp  callconjunction5.cubex  callconjunction6.cpp  callconjunction6.cubex  circle.cpp  circle.cubex  drops-filtered1.cubex  drops-filtered2.cubex  move-instrumentation.cpp  move-instrumentation.cubex  nestedConjunction.cpp  nestedConjunction.cubex  nodeBased.cfg  nodeBased.cpp  nodeBased.cubex  preferunwind.cpp  preverUnwind.cubex  spantree-problematic.cpp  spantree-problematic.cubex  spantree.cpp  spantree.cubex  test-unique-instrument.cpp  test-unique-instrument.cubex
pgis/tool/: CMakeLists.txt  PGISMain.cpp  PiraMain.cpp  StmtPrinterMain.cpp
pymetacg/: CMakeLists.txt  README.md  nanobind_json.h  pymetacg.cpp  util.h
pymetacg/tests/: CMakeLists.txt  DummyMD.cpp  conftest.py  requirements.txt  test_basics.py  test_metadata.py
tools/: CMakeLists.txt  README.md
tools/cage/: CMakeLists.txt
tools/cgcollector2/: .gitignore  CMakeLists.txt
tools/cgconvert/: CGConvert.cpp  CMakeLists.txt
tools/cgformat/: CGFormat.cpp  CMakeLists.txt
tools/cgmerge2/: CGMerge2.cpp  CMakeLists.txt
tools/cgpatch/: CMakeLists.txt  README  README.md
(+1229 files in other folders)
